# libfixkalman

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  FUNCTIONS.md  FUNCTIONS.rst  LICENSE  README.md  README.rst  Taskfile.dist.yaml  compiler.h  conanfile.py  example_gravity.c  fixkalman.c  fixkalman.h  fixmatrixadditions.c  fixmatrixadditions.h  kalman.c  kalman.h  libfixkalman.sln  libfixkalman.vcxproj  libfixkalman.vcxproj.filters  main.c  msvcfix.h  settings.h
.github/workflows/: ci.yml
CMake/: Findlibfixmath.cmake  Findlibfixmatrix.cmake
test_package/: CMakeLists.txt  conanfile.py  main.c
